--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.107.1",
     "@react-three/fiber": "^8.16.8",
     "@types/three": "^0.165.0",
+    "@vercel/analytics": "^1.4.1",
     "framer-motion": "^11.11.17",
     "leva": "^0.9.35",
     "next": "14.2.4",
